--- a/app.json
+++ b/app.json
@@ -17,13 +17,17 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "buildNumber": "1.0.0",
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.hss.HSSresourcesapp",
+      "permissions": [],
+      "versionCode": 1,
     },
     "web": {
       "favicon": "./assets/favicon.png"
